[gd_scene load_steps=4 format=3 uid="uid://b1pq5uajcp0x3"]

[ext_resource type="Script" path="res://Objects/LevelExit/LevelExit.gd" id="1_26tve"]
[ext_resource type="Texture2D" uid="uid://jced1evt3ucs" path="res://Graphics/wilsonhall.png" id="1_mh7j4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7g2r6"]
size = Vector2(16, 16)

[node name="LevelExit" type="Node2D"]
editor_description = "Allows player to exit level. Provide a file path in \"Next Level.\"

This is easily done by right clicking on a level scene and hitting \"Copy Path.\""
script = ExtResource("1_26tve")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_7g2r6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -54)
texture = ExtResource("1_mh7j4")

[node name="ExitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_exit_timer_timeout"]
